# WoWLauncher

./: .gitignore  CMakeLists.txt  README.md
src/: ChildWindow.cpp  ChildWindow.h  Program.cpp  Program.h  Registry.cpp  Registry.h  Window.cpp  Window.h  WoWLauncher.cpp  mainWindow.cpp  mainWindow.h  preCompiled.cpp  preCompiled.h  resource.h
src/res/: WoWLauncher.rc  logo.afphoto  resource.h
